# AlgoBowl

./: .gitignore  README.md  all_inputs.txt  real_inputs.txt  test_inputs.txt
algo_impl/: .gitignore  CMakeLists.txt  InvalidInput1-Not-Enough-Edges.txt  InvalidInput2-Unconnected-Graph.txt  main.cpp  util.h
algo_impl/algorithms/: Algorithm.cpp  Algorithm.h  Dijkstra.cpp  Dijkstra.h  Floyd_Dijkstra.cpp  Floyd_Dijkstra.h  MST.cpp  MST.h
algo_impl/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
algo_impl/util/: util.cpp  util.h
finalOutputs/: input_group676.txt  input_group677.txt  input_group678.txt  input_group679.txt  input_group680.txt  input_group681.txt  input_group682.txt  input_group683.txt  input_group684.txt  input_group685.txt  input_group686.txt  input_group687.txt  input_group688.txt  input_group689.txt  input_group690.txt  input_group691.txt  input_group692.txt  input_group693.txt  input_group694.txt  input_group695.txt  input_group696.txt  input_group697.txt  input_group701.txt  input_group702.txt  input_group705.txt  input_group707.txt  input_group709.txt
finalOutputs/kai-josh/: output_from_683_to_678.txt  output_from_683_to_679.txt  output_from_683_to_680.txt  output_from_683_to_681.txt  output_from_683_to_682.txt  output_from_683_to_683.txt  output_from_683_to_684.txt  output_from_683_to_685.txt  output_from_683_to_686.txt  output_from_683_to_686_JOSH.txt  output_from_683_to_687.txt  (+14 more)
inputs/: TestInput1.txt
verify/: AlgoBowlInput.txt_mst.txt  Verifier.cpp  Verifier.h  Verifiier.cpp  input.txt  out.txt  verify_main.cpp
(+3 files in other folders)
